fix and feat: - changes accordion-item - add components in combination component

--- a/src/app/pages/operators/combination/combine-latest/combine-latest.component.html
+++ b/src/app/pages/operators/combination/combine-latest/combine-latest.component.html
@@ -1,1 +1,36 @@
-<p>combine-latest works!</p>
+<div class="d-flex flex-column mh-30">
+  <blockquote>
+    Принимает несколько observable и когда происходит событие, то он возвращает последние значение всех наблюдаемых
+    observable. Он не возвращает значение пока все наблюдаемые observable не отработали хотя бы раз, потому иногда стоит
+    задать начальное значение, как в примере.
+  </blockquote>
+  <div class="row">
+    <div class="col-4">
+      <button type="button" class="btn btn-danger me-2" #redBtn>Red</button>
+      <button type="button" class="btn btn-dark" #blackBtn>Black</button>
+    </div>
+    <div class="col-8 d--inline-flex aling-items-center">
+      <span class="me-2">
+        Red: <span #redTotal>{{ info.redTotal }}</span>
+      </span>
+      <span class="me-2">
+        Black: <span #blackTotal>{{ info.blackTotal }}</span>
+      </span>
+      <span class="me-2">
+        Total: <span #total>{{ info.total }}</span>
+      </span>
+    </div>
+  </div>
+  <div class="row of-auto scroll">
+    <div class="col-6">
+      <pre class="scroll">
+        {{ js }}
+      </pre>
+    </div>
+    <div class="col-6">
+      <pre class="scroll">
+        {{ html }}
+      </pre>
+    </div>
+  </div>
+</div>
