--- a/src/app/shared/components/accordion-item/accordion-item.component.html
+++ b/src/app/shared/components/accordion-item/accordion-item.component.html
@@ -1,7 +1,7 @@
 <nav class="w-100">
-  <button type="button" class="btn btn-secondary w-100"  (click)="toggle()">Secondary</button>
+  <button type="button" class="btn btn-secondary w-100" (click)="toggle()">{{ title }}</button>
 </nav>
 
-<div class="accordion-item__block" [style.height.px]="isOpen ? height : 0">
+<div class="accordion-item__block" [style.height.px]="open ? height : 0">
   <ng-content></ng-content>
 </div>
