--- a/src/app/pages/operators/combination/fork-join/fork-join.component.html
+++ b/src/app/pages/operators/combination/fork-join/fork-join.component.html
@@ -1,1 +1,26 @@
-<p>fork-join works!</p>
+<div class="d-flex flex-column mh-30">
+  <blockquote>Когда observables завершены возвращает последнее значение каждого.</blockquote>
+  <div class="row">
+    <div [style.height.px]="80" class="col-2">
+      <img [src]="(avatars$ | async)?.google" alt="google" />
+    </div>
+    <div [style.height.px]="80" class="col-2">
+      <img [src]="(avatars$ | async)?.microsoft" alt="microsoft" />
+    </div>
+    <div [style.height.px]="80" class="col-2">
+      <img [src]="(avatars$ | async)?.user" alt="user" />
+    </div>
+  </div>
+  <div class="row of-auto scroll">
+    <div class="col-6">
+      <pre class="scroll">
+        {{ js }}
+      </pre>
+    </div>
+    <div class="col-6">
+      <pre class="scroll">
+        {{ html }}
+      </pre>
+    </div>
+  </div>
+</div>
