--- a/src/app/pages/operators/combination/start-with/start-with.component.html
+++ b/src/app/pages/operators/combination/start-with/start-with.component.html
@@ -1,1 +1,20 @@
-<p>start-with works!</p>
+<div class="d-flex flex-column mh-30">
+  <blockquote>
+    Устанавливает первоначальное значение, которое будет возвращаться.
+  </blockquote>
+  <div class="row" [style.min-height.px]="30">
+    <div class="col">{{ result$ | async }}</div>
+  </div>
+  <div class="row of-auto scroll">
+    <div class="col-6">
+      <pre class="scroll">
+        {{ js }}
+      </pre>
+    </div>
+    <div class="col-6">
+      <pre class="scroll">
+        {{ html }}
+      </pre>
+    </div>
+  </div>
+</div>
