--- a/src/app/pages/operators/filtering/debounce-time/debounce-time.component.html
+++ b/src/app/pages/operators/filtering/debounce-time/debounce-time.component.html
@@ -1,5 +1,16 @@
 <app-content [html]="html" [js]="js">
-  <span description> #description </span>
+  <span description>
+    Игнорирует событие на протяжении установленного времени.
+  </span>
 
-  <div example>#example</div>
+  <div example class="row">
+    <div class="col-6">
+      <input #searchInput placeholder="search" type="text" />
+    </div>
+    <div class="col-6">
+      Результат ввода при debounceTime: {{ debounce$ | async }}
+      <br />
+      Результат ввода без debounceTime: {{ withoutDebounce$ | async }}
+    </div>
+  </div>
 </app-content>
