--- a/src/app/pages/operators/transformation/exhaust-map/exhaust-map.component.html
+++ b/src/app/pages/operators/transformation/exhaust-map/exhaust-map.component.html
@@ -1,7 +1,9 @@
 <app-content [html]="html" [js]="js">
   <span description>
-    Отменяет все предыдущие события, которые приходят в потоке. В примере
-    смотреть вкладку network при редактировании формы.
+    Не реагирует на поток событий пока не закончится предыдущее. Если мы
+    посмотрим пример, то во вкладке network, запрос не начинается пока не
+    завершится предыдущий. В отличии от concatMap не выстраивается очередь из
+    запросов.
   </span>
 
   <div example>
