--- a/src/app/pages/operators/filtering/filter/filter.component.html
+++ b/src/app/pages/operators/filtering/filter/filter.component.html
@@ -1,5 +1,9 @@
 <app-content [html]="html" [js]="js">
-  <span description> #description </span>
+  <span description> Фильтрует значения в потоке по условию. </span>
 
-  <div example>#example</div>
+  <div example class="row">
+    <span class="col-12" *ngFor="let item of source$ | async">
+      Имя: {{ item?.name }}. Полных лет: {{ item?.age }}
+    </span>
+  </div>
 </app-content>
